[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["MasonChance <mason.fryberger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.1"
matplotlib = "^3.3.3"
numpy = "^1.19.5"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
